--- a/forgot-password.html
+++ b/forgot-password.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>忘记密码 - 单词记忆系统</title>
     <!-- Tailwind CSS -->
-    <script src="/myspellpal/js/jquery-3.7.1.min.js"></script>
+    <script src="/myspellpal/js/new_file.js"></script>
     <!-- Font Awesome -->
-    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/myspellpal/css/new_file.css" rel="stylesheet">
     
     <!-- Tailwind CSS 配置 -->
     <script>
