--- a/register.html
+++ b/register.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>单词记忆系统 - 注册</title>
     <!-- Tailwind CSS -->
-    <script src="/myspellpal/js/new_file.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome -->
-    <link href="/myspellpal/css/new_file.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Google Fonts -->
-    <link href="/myspellpal/css/css2.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Tailwind 配置 -->
     <script>
