--- a/word-memorization.html
+++ b/word-memorization.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>英语单词默写网站</title>
     <!-- Tailwind CSS -->
-    <script src="/myspellpal/js/new_file.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome -->
-    <link href="/myspellpal/css/new_file.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     
     <!-- Tailwind 配置 -->
     <script>
