--- a/word-memorization.html
+++ b/word-memorization.html
@@ -71,7 +71,7 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <i class="fa fa-book text-primary text-2xl"></i>
-                <h1 class="text-xl font-bold text-primary">WordMaster</h1>
+                <h1 class="text-xl font-bold text-primary">MySpellPal</h1>
             </div>
             <div class="flex items-center space-x-4">
                 <button id="themeToggle" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors">
